completed and commented DEPLOY

--- a/pom.xml
+++ b/pom.xml
@@ -30,10 +30,17 @@
       <scope>provided</scope>
     </dependency>
 
+    <!--
     <dependency>
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
       <version>42.2.21</version>
+    </dependency>
+-->
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>9.4.1208</version>
     </dependency>
 
     <dependency>
