--- a/pom.xml
+++ b/pom.xml
@@ -30,17 +30,10 @@
       <scope>provided</scope>
     </dependency>
 
-    <!--
     <dependency>
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
       <version>42.2.21</version>
-    </dependency>
--->
-    <dependency>
-      <groupId>org.postgresql</groupId>
-      <artifactId>postgresql</artifactId>
-      <version>9.4.1208</version>
     </dependency>
 
     <dependency>
@@ -74,12 +67,12 @@
   <build>
     <finalName>registration</finalName>
     <plugins>
-      <plugin>
+      <!--<plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
         <version>3.3.1</version>
       </plugin>
-
+-->
 
 
 <!--   -->
