--- a/pom.xml
+++ b/pom.xml
@@ -67,15 +67,14 @@
   <build>
     <finalName>registration</finalName>
     <plugins>
-      <!--<plugin>
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
         <version>3.3.1</version>
       </plugin>
--->
 
 
-<!--   -->
+      <!--
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-dependency-plugin</artifactId>
@@ -99,7 +98,7 @@
           </execution>
         </executions>
       </plugin>
-      <!-- -->
+       -->
 
 
 
