--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,15 @@
   <name>registration</name>
   <packaging>war</packaging>
 
-  <properties>
+  <!--<properties>
     <maven.compiler.target>11</maven.compiler.target>
     <maven.compiler.source>11</maven.compiler.source>
+  </properties>-->
+
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 
   <dependencies>
