--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,12 @@
       <version>20220320</version>
     </dependency>
 
+      <dependency>
+        <groupId>com.sun.mail</groupId>
+        <artifactId>javax.mail</artifactId>
+        <version>1.6.2</version>
+      </dependency>
+
   </dependencies>
 
   <build>
